Creates and solves hash puzzles